# usbview2

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.in  usbview2.glade  usbview2.gladep
pixmaps/: logo.xpm
src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  logo.h  lsusb.c  lsusb.h  main.c  usbparse.c  usbparse.h  usbtree.c  usbtree.h
src/xml/: parser.c  parser.h  parser.py  usb.ids  usb.xml
