dnl Process this file with autoconf to produce a configure script.
dnl IMPORTANT: After modifications run `autoreconf -fvi`

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(usbview2, 1.0.0)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_LIBTOOL

dnl Build without libusb if dessired
AC_ARG_WITH([usbfs],
	[AS_HELP_STRING([--with-usbfs],
	[Build with USB device filesystem support (Kernel support required)],[])])


libusb="libusb >= 0.1.0"
pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, $pkg_modules $libusb)

dnl Enable the USBFS support if requested
if test "x$with_usbfs" == "xyes"; then
	PACKAGE_CFLAGS="$PACKAGE_CFLAGS -DUSBVIEW2_WITH_USBFS"
fi

PACKAGE_CFLAGS="$PACKAGE_CFLAGS -Wall"
	
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=usbview2
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

